--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
-    "mongosh": "^2.3.9"
+    "mongosh": "^2.3.9",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "backend",
   "version": "1.0.0",
