--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,20 +1,12 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0",
-    "mongosh": "^2.3.9",
-    "multer": "^1.4.5-lts.1"
-  },
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
